# scrapeghost

./: .gitignore  .pre-commit-config.yaml  404.html  Justfile  LICENSE.md  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: test.yml
LICENSE/: index.html
_cost/: index.html
api/: index.html
assets/: extra.css
changelog/: index.html
cli/: index.html
code_of_conduct/: index.html
docs/: LICENSE.md  _cost.md  api.md  changelog.md  cli.md  code_of_conduct.md  faq.md  index.md  openai.md  tutorial.md  usage.md
docs/examples/: pydantic_example  pydantic_example.py
docs/examples/tutorial/: cli.sh  episode_scraper_1.py  episode_scraper_2.py  episode_scraper_3.py  episode_scraper_5.py  list_scraper_v3.py  logconfig.py  tutorial_final.py  v1.py  v2.py  v3.py  v5.py
docs/snippets/: _apikey.md  _cost.md
docs/tutorial_code/: v2.py  v3.py  v5.py  v6.py
examples/: cbb.py  cbb_tutorial.qmd  ilga.py  ilga_example.py  legislators.py  yoyodyne.py
examples/tutorial/: episode_scraper_4.py  list_scraper_v2.py
faq/: index.html
openai/: index.html
search/: search_index.json
snippets/_apikey/: index.html
snippets/_cost/: index.html
src/: autoscrape.py  scrapeghost.py
src/scrapeghost/: __init__.py  apicall.py  cli.py  errors.py  models.py  postprocessors.py  preprocessors.py  response.py  responses.py  scrapers.py  utils.py
tests/: test_apicall.py  test_cli.py  test_hallucination.py  test_json_postprocessor.py  test_live.py  test_live_adversarial.py  test_nudge_live.py  test_pagination.py  test_preprocessors.py  test_pydantic.py  test_schemascraper.py  test_scraper.py  test_utils.py  testutils.py
tests/live/: test_live.py  test_live_adversarial.py  test_live_cli.py  test_live_pagination.py
tutorial/: index.html
tutorial_code/: v4.py  v5.py  v6.py
usage/: index.html
