[tool.poetry]
name = "scrapeghost"
version = "0.4.0"
description = "An experimental library for scraping websites using GPT."
authors = ["James Turk <dev@jamesturk.net>"]
license = "Hippocratic License HL3-EXTR-FFD-LAW-MIL-SV"
readme = "README.md"

[tool.poetry.scripts]
scrapeghost = 'scrapeghost.cli:main'

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.1"
cssselect = "^1.2.0"
lxml = "^4.9.2"
structlog = "^22.3.0"
typer = "^0.7.0"
rich = "^13.3.2"
tiktoken = "^0.3.2"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
mkdocs-material = "^9.1.3"
ruff = "^0.0.257"
mypy = "^1.1.1"
pytest-cov = "^4.0.0"
types-requests = "^2.28.11.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"